@startuml

' Class definitions
abstract class Item {
    - UUID uuid
    - String name
    + Item(UUID uuid, String name)
    + UUID getUuid()
    + String getName()
    + getCost() : double
    + getTax() : double
    + toString() : String
}

class Equipment {
    - String modelNumber
    - double price
    + Equipment(UUID uuid, String name, String modelNumber, double price)
    + double getPrice()
    + double getCost() : double
    + double getTax() : double
    + String getModelNumber()
    + toString() : String
}

class Contract {
    - Company servicer
    - double cost
    + Contract(UUID uuid, String name, Company servicer)
    + double getCost() : double
    + double getTax() : double
    + setCost(double cost)
    + toString() : String
}

class Material {
    - String unit
    - double costPerUnit
    - int numOfUnits
    + Material(UUID uuid, String name, String unit, double costPerUnit)
    + void setNumOfUnits(int numOfUnits)
    + double getCost() : double
    + double getTax() : double
    + toString() : String
}

class Lease {
    - LocalDate start
    - LocalDate end
    + Lease(UUID uuid, String name, String modelNumber, double price, LocalDate start, LocalDate end)
    + double getCost() : double
    + double getTax() : double
    + toString() : String
}

class Rental {
    - double rentalHours
    + Rental(UUID uuid, String name, String modelNumber, double price, double rentalHours)
    + double getCost() : double
    + double getTax() : double
    + toString() : String
}

class Person {
    - UUID personUuid
    - String firstName
    - String lastName
    - String phone
    - List<String> emails
    + Person(UUID uuid, String firstName, String lastName, String phone, List<String> emails)
    + UUID getUuid()
    + String getFirstName()
    + String getLastName()
    + String getPhone()
    + List<String> getEmails()
    + toString() : String
}

class Company {
    - UUID companyUuid
    - String name
    - String address
    + Company(UUID uuid, String name, String address)
    + UUID getCompanyUuid()
    + String getName()
    + String getAddress()
    + toString() : String
}

class Invoice {
    - UUID invoiceUuid
    - Company customer
    - Person salesperson
    - LocalDate invoiceDate
    - List<Item> items
    + Invoice(UUID invoiceUuid, Company customer, Person salesperson, LocalDate invoiceDate)
    + double getSubtotal() : double
    + double getTaxTotal() : double
    + double getGrandTotal() : double
    + void addItem(Item newItem)
    + toString() : String
    + static List<Invoice> loadInvoiceData(String invoiceFileName, String invoiceItemFileName, List<Company> customerList, List<Person> salespersonList, List<Item> itemList) : List<Invoice>
}

' Relationships
Item <|-- Equipment
Item <|-- Contract
Item <|-- Material
Equipment <|-- Lease
Equipment <|-- Rental

Invoice "1" -- "0..*" Item : contains
Invoice "1" -- "1" Company : belongs to
Invoice "1" -- "1" Person : belongs to

@enduml
